Revision history for Text-Flags

{{$NEXT}}

0.0.5  2021-11-30T12:45:59+01:00
    - Add command line script "tf" for easier access

0.0.4  2021-11-07T12:19:56+01:00
    - Remove module statement, we don't need it anymore

0.0.3  2021-09-08T14:17:29+02:00
    - Change file extension to .rakumod
    - Migrate to zef ecosystem
    - Update email address
    - Update copyright year

0.0.2  2020-11-05T18:25:36+01:00
    - Fix breakage on versions that don't have Unicode 13.1 yet
    - Add list of supported flags to documentation

0.0.1  2020-11-05T13:21:50+01:00
    - Initial version